[package]
name = "whodis"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/havenwood/whodis"
description = "mDNS / Bonjour recon and spoof toolkit for macOS"
keywords = ["mdns", "bonjour", "pentest", "security", "network"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "whodis"
path = "src/bin/whodis.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal", "io-util"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
socket2 = { version = "0.5", features = ["all"] }
hickory-proto = { version = "0.24", default-features = false }
get_if_addrs = "0.5"
libc = "0.2"
dashmap = "6"
phf = { version = "0.11", features = ["macros"] }
governor = "0.7"
ipnet = "2"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
anyhow = "1"
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[lints.clippy]
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

redundant_pub_crate = "allow"
missing_const_for_fn = "allow"

cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

boxed_local = "deny"
clone_on_copy = "deny"
cognitive_complexity = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
indexing_slicing = "deny"
allow_attributes_without_reason = "deny"

[lints.rust]
future_incompatible = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
unused = "deny"

single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"

unsafe_code = "deny"
