[package]
name = "whodis"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/havenwood/whodis"
description = "mDNS / Bonjour recon and spoof toolkit for macOS"
keywords = ["mdns", "bonjour", "pentest", "security", "network"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "whodis"
path = "src/bin/whodis.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal", "io-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tokio-stream = "0.1.18"
time = { version = "0.3.47", features = ["formatting", "local-offset", "macros"] }
socket2 = { version = "0.6", features = ["all"] }
hickory-proto = { version = "0.26.1", default-features = false, features = ["std", "mdns"] }
get_if_addrs = "0.5.3"
nix = { version = "0.31.2", default-features = false, features = ["net"] }
dashmap = "6.1"
governor = "0.10"
ipnet = { version = "2.12", features = ["serde"] }
bytes = "1.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.6", features = ["derive", "env", "wrap_help"] }
anyhow = "1.0"
toml = "1.1"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
pcap-file = "2"

[lints.clippy]
cargo = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

redundant_pub_crate = "allow"
missing_const_for_fn = "allow"

cargo_common_metadata = "allow"
multiple_crate_versions = "allow"

missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"

boxed_local = "deny"
clone_on_copy = "deny"
cognitive_complexity = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
indexing_slicing = "deny"
allow_attributes_without_reason = "deny"

[lints.rust]
future_incompatible = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
unused = "deny"

single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unreachable_pub = "deny"

unsafe_code = "deny"
