[package]
name = "whodis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "mDNS / Bonjour recon and spoof toolkit for macOS"
keywords = ["mdns", "bonjour", "pentest", "security", "network"]
categories = ["command-line-utilities", "network-programming"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "whodis"
path = "src/bin/whodis.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
time = { workspace = true }
socket2 = { workspace = true }
hickory-proto = { workspace = true }
get_if_addrs = { workspace = true }
dashmap = { workspace = true }
phf = { workspace = true }
governor = { workspace = true }
ipnet = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
